Update wrappers